--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "axios": "^0.18.0",
     "bootstrap": "^4.1.3",
     "enzyme": "^3.7.0",
+    "enzyme-to-json": "^3.3.4",
     "leaflet": "^1.3.4",
     "prop-types": "^15.6.2",
     "react": "^16.5.2",
@@ -16,6 +17,7 @@
     "react-scripts": "2.0.4",
     "redux": "^4.0.0",
     "redux-devtools-extension": "^2.13.5",
+    "redux-mock-store": "^1.5.3",
     "redux-thunk": "^2.3.0"
   },
   "scripts": {
