--- a/package.json
+++ b/package.json
@@ -7,11 +7,11 @@
     "bootstrap": "^4.1.3",
     "enzyme": "^3.7.0",
     "enzyme-to-json": "^3.3.4",
-    "leaflet": "^1.3.4",
     "prop-types": "^15.6.2",
     "react": "^16.5.2",
     "react-dom": "^16.5.2",
     "react-leaflet": "^2.1.0",
+    "react-loader-spinner": "^2.0.6",
     "react-redux": "^5.0.7",
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.0.4",
